fix(DS/client): adjust communication for key packages
