# openapi/ds-openapi.yml
@@ -230,10 +230,9 @@ paths:
         '200':
           description: Retrieved a key package.
           content:
-            application/octet-stream:
+            application/json:
               schema:
-                type: string
-                format: binary
+                $ref: '#/components/schemas/FetchKeyPackageResponse'
         '401':
           description: Unkwown or unauthorized user.
         '500':
@@ -354,7 +353,7 @@ paths:
     delete:
       tags:
       - crate
-      summary: Unshare a folder with other users.
+      summary: Delete a proposal message.
       operationId: ack_message
       parameters:
       - name: folder_id
@@ -496,6 +495,16 @@ components:
         user_email:
           type: string
           description: The user email
+    FetchKeyPackageResponse:
+      type: object
+      description: Upload a file to the server.
+      required:
+      - payload
+      properties:
+        payload:
+          type: string
+          format: binary
+          description: The payload.
     FolderFileResponse:
       type: object
       required:
